Updated the booking summary modal to include different HTML elements for displaying the modal on the chef detail page. The modal is fixed on the right side of the screen for larger screens, while on mobile devices, it can be displayed as a modal upon clicking the shopping bag icon.

--- a/users/static/css/chef_detail.css
+++ b/users/static/css/chef_detail.css
@@ -17,21 +17,6 @@
   box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
 }
 
-.booking-container {
-  background-color: white;
-  position: -webkit-fixed;
-  position: fixed;
-  top: 25%;
-  right: 20%;
-  padding: 2rem 0;
-  border-radius: 5px;
-  box-shadow: var(--card-box-shadow);
-}
-
-.booking-container div:nth-child(n) {
-  padding-bottom: 10px;
-}
-
 .test {
   background-color: red;
 }
@@ -72,4 +57,26 @@
 
 .review-header h6 {
   margin-bottom: 0;
+}
+
+.booking-container {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .booking-container {
+    display: block;
+    background-color: white;
+    position: -webkit-fixed;
+    position: fixed;
+    top: 25%;
+    right: 20%;
+    padding: 2rem 0;
+    border-radius: 5px;
+    box-shadow: var(--card-box-shadow);
+  }
+
+  .booking-container div:nth-child(n) {
+    padding-bottom: 10px;
+  }
 }
